# thel

./: .gitignore  LICENSE  README.md  jest.config.js  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: test.yml
scripts/: build.mjs  prepare.mjs  publish.mjs
src/: index.ts
src/__tests__/: pkg.test.ts
src/actions/: create-new-project.ts  template.ts
src/actions/create-new-project/: create-node-project.ts  create-python-project.ts  index.ts
src/helpers/: logger.ts  pkg.ts
src/lib/: definitions.ts
src/lib/filen/: copy-file.ts  index.ts  make-dirs.ts  types.ts
src/lib/filer/: index.ts  make-dirs.ts  read-file.ts  write-file.ts
src/templates/: README.md
src/templates/js/: .gitignore  jest.config.ts  package.json  tsconfig.json
src/templates/js/.github/workflows/: release.yml
src/templates/js/src/: index.ts
src/templates/js/src/__tests__/: index.test.ts
src/templates/py/: main.py  pyproject.toml
src/ui/: title.ts  types.ts
tests/: pkg.test.js
