[project]
name = "src/templates/py"
version = "0.1.0"
authors = [
  { name="yourname", email="yourmail@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"